--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         </div>
         <input type="submit" value="save"/>
       </form>
+      <h1>Watchlist</h1>
+      <ul id="watchlist"></ul>
     
 </body>
 </html>
